# properpath

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish_doc.yml  test.yml
apis/properpath/: index.html
apis/validators/: index.html
docs/: index.md  integrations.md  tutorial.md
docs/Reference APIs/: properpath.md  validators.md
docs/apis/: properpath.md  validators.md
docs/stylesheets/: extra.css
integrations/: index.html
search/: search_index.json
src/properpath/: __init__.py  platformdirs_.py  platformdirs_.pyi  properpath.py  utils.py
src/properpath/validators/: __init__.py  base.py  validators.py
tests/: test_properpath.py  test_validators.py
tests/extra_test/: test_pathlib_tests.py
tests/extra_test/support/: __init__.py  os_helper.py
tutorial/: index.html
