[project]
name = "properpath"
version = "0.2.6"
authors = [{ name = "Alexander Haller, Mahadi Xion", email = "elabftw@uni-heidelberg.de" }]
maintainers = [{ name = "Mahadi Xion", email = "mahadi.xion@urz.uni-heidelberg.de" }]
readme = "README.md"
description = "A pathlib.Path drop-in replacement with extra features. "
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.4.0,<4.5.0",
]
license = "MIT"
keywords = [
    "path",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://uhd-urz.github.io/properpath/"
Repository = "https://github.com/uhd-urz/properpath"
Issues = "https://github.com/uhd-urz/properpath/issues"
Changelog = "https://github.com/uhd-urz/properpath/blob/main/CHANGELOG.md"

[tool.uv.build-backend]
module-name = "properpath"
module-root = "src"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.30.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "tests/extra_test",
]
